# snippetaffairs

./: .gitignore  AGENTS.md  LICENSE  README.en.md  README.md  REVIEW.md  eslint.config.js  index.html  package.json
.claude/commands/: pruefen.md
.githooks/: pre-push
.github/workflows/: release.yml  test.yml
scripts/: check.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: espanso.rs  ipc_tests.rs  lib.rs  main.rs
src/components/: BackupsModal.tsx  Diagnostics.tsx  ErrorDialog.tsx  HubBrowser.tsx  Logo.tsx  PromptModal.tsx  SnippetEditor.tsx  TestSnippetModal.tsx
src/lib/: api.ts  errorcodebase-registry.json  errors.test.ts  errors.ts  hub.test.ts  hub.ts
src/styles/: tokens.css
