[package]
name = "snippetaffairs"
version = "0.2.0"
description = "SnippetAffAIrs — Text-Expander-GUI (espanso) im KI-AffAIrs-Design"
authors = ["KI AffAIrs (Claus Zeißler)"]
license = "CC-BY-4.0"
edition = "2021"
# MSRV: Ab Rust 1.81 ist das Batch-Argument-Escaping (Fix für CVE-2024-24576)
# vollständig — nötig, weil die Engine-CLI .bat/.cmd-Shims direkt gespawnt wird
# (kein `cmd /C`, siehe run_espanso in src/espanso.rs). Ältere Toolchains ohne
# dieses Escaping würden sonst still unsicher bauen.
rust-version = "1.81"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "snippetaffairs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"


[dev-dependencies]
# "test" liefert mock_builder + INVOKE_KEY: erlaubt echte IPC-Calls im Test,
# damit die Naht Frontend→Command (Argument-Namen!) verifiziert wird.
tauri = { version = "2", features = ["test"] }
