[package]
name = "snippetaffairs"
version = "0.2.0"
description = "SnippetAffAIrs — Text-Expander-GUI (espanso) im KI-AffAIrs-Design"
authors = ["KI AffAIrs (Claus Zeißler)"]
license = "CC-BY-4.0"
edition = "2021"
# MSRV: Ab Rust 1.81 ist das Batch-Argument-Escaping (Fix für CVE-2024-24576)
# vollständig — nötig, weil die Engine-CLI .bat/.cmd-Shims direkt gespawnt wird
# (kein `cmd /C`, siehe run_espanso in src/espanso.rs). Ältere Toolchains ohne
# dieses Escaping würden sonst still unsicher bauen.
rust-version = "1.81"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "snippetaffairs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# YAML-Parser: serde_norway statt des eingestellten serde_yaml (0.9.34+deprecated,
# letztes Update 03/2024, vom Autor selbst als deprecated markiert — bekommt keine
# Fixes mehr, verarbeitet hier aber FREMDE Dateien). serde_norway ist ein aktiv
# gepflegter, API-kompatibler Hard-Fork (Maintainerin Christina Sørensen, 2025 noch
# responsiv, keine RUSTSEC-Advisory) und exakt die Bibliothek, die auch espanso selbst
# nutzt (espanso PR #2532) — so parst diese GUI die YAMLs mit dem Parser der Engine,
# die sie erzeugt und liest. Exakt gepinnt (`=`, kein Floating), damit der Wechsel
# bewusst und überprüfbar bleibt.
serde_norway = "=0.9.42"


[dev-dependencies]
# "test" liefert mock_builder + INVOKE_KEY: erlaubt echte IPC-Calls im Test,
# damit die Naht Frontend→Command (Argument-Namen!) verifiziert wird.
tauri = { version = "2", features = ["test"] }
